# OneGame

./: .clang-format  CMakeLists.txt  README.md
assets/shaders/: instance.vert  main.frag  main.vert
include/firstgame/: event.h  firstgame.h
include/firstgame/event/: cursor.h  event.h  joystick.h  key.h  mouse.h  scroll.h  window.h
include/firstgame/input/: key.h  mouse.h
include/firstgame/platform/: filesystem.h
src/: firstgame.cpp
src/firstgame/: firstgame.cpp
src/firstgame/camera/: camera.cpp  camera.h
src/firstgame/opengl/: buffer.cpp  buffer.h  gl.h  shader.cpp  shader.h  shader_vars.h  vertex_array.cpp  vertex_array.h
src/firstgame/opengl/gl/: bitfield.h  boolean.h  enum.h  extension.h  functions.h  types.h  values.h
src/firstgame/render/: camera_orthographic.h  camera_perspective.h  camera_system.cpp  camera_system.h  helper.cpp  helper.h  motion.h  painter.cpp  painter.h  render_pass.h  renderable.cpp  renderable.h  renderable_instanced.h  renderer.cpp  renderer.h  shader_lib.cpp  shader_lib.h  shader_variables.h  transform.h  view_projection.h
src/firstgame/renderer/: camera.h  camera_perspective.h  component.cpp  component.h  helper.cpp  helper.h  renderer.cpp  renderer.h  shader.h  shader_attrib.h  shader_uniform.h  shader_variable.h  shader_variables.h  transform.h  triangle_renderer.cpp  triangle_renderer.h  view_projection.h
src/firstgame/system/: asset.cpp  asset.h  asset_mgr.cpp  asset_mgr.h  log.h  system.h
src/firstgame/util/: currenton.h  direction.h  filesystem_literals.h  overloaded.h  scoped.h  size.h
src/include/internal/: log.h
